<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Apartado2">

    <EditText
        android:id="@+id/editTitulo"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/t_tulo_del_mensaje"
        android:inputType="textPersonName"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/editMensaje"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/texto_del_mensaje"
        android:inputType="textPersonName"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/editSegundos"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/segundos_para_que_salga_la_notificaci_n"
        android:inputType="textPersonName"
        android:autofillHints="" tools:targetApi="o" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar" />
</LinearLayout>